# maven-rs

./: .gitignore  Cargo.toml
examples/: hello.rs
src/: default_impl.rs  lib.rs
tests/: it.rs
